# healthcare

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  run-all.sh  start.sh
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  deps.py  main.py
backend/app/agents/tools/: meddra_tool.py
backend/app/core/: security.py  storage.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  file_chunk.py  history.py  terminology_term.py  terminology_version.py  translate_task.py  uploaded_file.py  user.py
backend/app/routers/: auth.py  file.py  history.py  translate.py
backend/app/schemas/: auth.py  common.py  file.py  history.py  translate.py
backend/app/services/: auth_service.py  document_service.py  file_service.py  history_service.py  provider_service.py  terminology_service.py  translate_service.py
backend/app/tasks/: celery_app.py  file_translate_task.py
backend/medical_translate_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_functional_api.py
docs/: translate-backend-design.md  translate-frontend-design.md  医药翻译PRD-补充章节.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/api/: auth.ts  client.ts  config.ts  file.ts  history.ts  translate.ts
frontend/src/hooks/: use-file-download.ts  use-file-translation.ts  use-file-upload.ts  use-history.ts  use-text-translation.ts
(+24 files in other folders)
